--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>ANGEL ALVAREZ</title>
-</head>
-</body>
-   <h1>HOLA MUNDO</h1>
+<HTml>
+<HEad>
+    <TITle>PROYECTO FINAL</TITle>
+</HEad>
+<BODy style="font-family: Arial, Helvetica, sans-serif; background-color: white; color: #333; margin: 0;padding: 0;">
+    <HEader style="background-color: #2C3E50;padding: 20px; text-align: center;">
+        <H1 style="color: white;margin: 0;">MI OPINION SOBRE LA PELICULA</H1>
+    </HEader>
+    <MAin style="max-width: 800px;margin: 30px auto; background-color: white;padding: 20PX;border-radius: 10px;box-shadow: 0 4px 8px black;">
+        <SEction>
+            <H1>SINOPSIS</H1>
+            <P>Esta película de terror de metraje encontrado narra la historia de Katie y Micah, una pareja que se muda a una casa en San Diego. Katie ha sido atormentada por una presencia demoníaca desde niña, y al intensificarse los sucesos extraños en su nuevo hogar, Micah, un escéptico, decide grabar lo que ocurre con una cámara de video. La cinta, presentada como el metraje encontrado de esa cámara y otras de seguridad, muestra cómo la actividad paranormal incrementa de ruidos y movimientos simples a fenómenos violentos como puertas que se azotan, cosas que se mueven solas y ataques físicos.</P>
+        </SEction>
 
-</html>
+        <SEction>
+            <H1>MI OPINION</H1>
+            <P>Me parece una pelicula interesante y entretenida, no la recomiendo ver a media noche y mucho menos solo, lo que si recomiendo es que vean toda la secuela o continuacion </P>
+        </SEction>
+
+        <SEction>
+            <H1>CALIFICACION PERSONAL</H1>
+            <P style="font-size: 24px; color: #F39C12;">★★★★★ 5.5</P>
+        </SEction>
+
+        <SEction>
+            <Img src="https://static.wikia.nocookie.net/actividadparanormal/images/e/ec/Paranormal_activity_xlg.jpg/revision/latest?cb=20140411003300&path-prefix=es" style="width: 300px;">
+        </SEction>
+    </MAin>
+
+    <FOOter style="text-align: center;padding: 20px; background-color: white;color: black;">
+        <P>CREADO POR [SAUL RODRIGUEZ] - 2025</P>
+    </FOOter>
+</BODy>
+</HTml>
